syntax = "proto3";

option go_package = "backend/auth-microservice/api";
option java_package = "com.example.booking";
option java_multiple_files = true;


message RegisterRequest{
  string login = 1;
  string password = 2;
}

message RegisterResponse{
  int64 user_id = 1;
}

message LoginRequest{
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  int64 user_id = 2;
  string login = 3;
}

service AuthService{
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}
